--- a/examples/index.html
+++ b/examples/index.html
@@ -13,7 +13,7 @@
 
   <section id="abstract">
     <p>
-      This document provides readers with an index of <cite><a href="https://www.w3.org/TR/aria-practices/"><abbr title="ARIA Authoring Practices">ARIA Authoring Practices </abbr> 1.1</a></cite> examples using <cite><a href="https://www.w3.org/TR/wai-aria-1.1/"><abbr title="Accessible Rich Internet Applications">WAI-ARIA</abbr> 1.1</a></cite> [[WAI-ARIA]] to create accessible rich internet applications.
+      This document provides readers with an index of <cite><a href="https://www.w3.org/TR/wai-aria-practices-1.1/"><abbr title="ARIA Authoring Practices">ARIA Authoring Practices </abbr> 1.1</a></cite> examples using <cite><a href="https://www.w3.org/TR/wai-aria-1.1/"><abbr title="Accessible Rich Internet Applications">WAI-ARIA</abbr> 1.1</a></cite> [[WAI-ARIA]] to create accessible rich internet applications.
       The index provides references to examples by role, properties and states.
       Not every role, property and state may have an example.
     </p>
