--- a/examples/index.html
+++ b/examples/index.html
@@ -20,6 +20,35 @@
     <p>This document is part of the WAI-ARIA suite described in the <a href="https://www.w3.org/WAI/intro/aria.php">WAI-ARIA Overview</a>.</p>
   </section>
 
+  <section id="sotd">
+    <p>
+      This is an editor's draft by the
+      <a href="https://www.w3.org/WAI/ARIA/">Accessible Rich Internet Applications Working Group</a>
+      of the
+      <a href="https://www.w3.org/WAI/">Web Accessibility Initiative</a>.
+      It supports the
+      <a href="" class="specref">WAI-ARIA 1.1</a> [<cite><a href="#bib-WAI-ARIA" class="bibref">WAI-ARIA</a></cite>]
+      specification, providing detailed advice and examples beyond what would be appropriate to a technical specification but which are important to understand the specification.
+    </p>
+    <p> This draft includes only a portion of content planned for WAI-ARIA Authoring Practices Examples 1.1. To see plans for the complete guide, review the <a href="https://github.com/w3c/aria-practices/milestones?direction=asc&amp;sort=due_date&amp;state=open">Authoring Practices Milestone Plan</a>. </p>
+    <p>
+      Feedback on the  information provided here is essential to the ultimate success of Rich Internet Applications that afford full access to their information and operations.
+      The Accessible Rich Internet Applications Working Group asks in particular:
+    </p>
+    <ul>
+      <li>Is it clear which roles, properties and states are associated with each example?</li>
+      <li>Is the usage of roles, states, and properties clear? </li>
+      <li>Are the various types of rich Web content covered? </li>
+      <li>Is the relationship of this document to the WAI-ARIA specification clear? </li>
+    </ul>
+    <p>
+      To comment,
+      <a href="https://github.com/w3c/aria-practices/issues/">file an issue in the <abbr title="World Wide Web Consortium">W3C</abbr> ARIA Practices GitHub repository</a>,
+      or if that is not possible, send email to
+      <a href="mailto:public-aria@w3.org?subject=Comment%20on%20WAI-ARIA%20Practices%201.1">public-aria@w3.org</a>
+      (<a href="http://lists.w3.org/Archives/Public/public-aria/">comment archive</a>).
+    </p>
+  </section>
 
   <section id="examples_by_roles">
 
