removed right and left arrow keyboard support for font popup menu and aded design pattern references to widget documentation

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -277,7 +277,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
 
     <section>
       <h3 id="kbd_label_2">Toggle Button</h3>
-      <p>The <b>Bold</b>, <i>Italic</i>, <u>Underline</u> and the left, center and right justification buttons in the toolbar.</p>
+      <p>The <b>Bold</b>, <i>Italic</i>, <u>Underline</u> and the left, center and right justification buttons in the toolbar and use the <a href="../../#button">Toggle Button design pattern</a>.</p>
       <table aria-labelledby="kbd_label_2" class="def">
         <thead>
           <tr>
@@ -319,7 +319,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
 
     <section>
       <h3 id="kbd_label_4">Menu (Text Alignment)</h3>
-      <p>The menu changes the text alignment of the content in the <code>textarea</code>.</p>
+      <p>The menu changes the text alignment of the content in the <code>textarea</code> and uses the <a href="../../#menu">Menu design pattern</a>.</p>
       <table aria-labelledby="kbd_label_4" class="def">
         <thead>
           <tr>
@@ -376,7 +376,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
 
     <section>
       <h3 id="kbd_label_5">Menu Button (Font Family)</h3>
-      <p>The menu opens the font family menu.</p>
+      <p>The menu opens the font family menu and uses the <a href="../../#menubutton">Menu Button design pattern</a>.</p>
       <table aria-labelledby="kbd_label_5" class="def">
         <thead>
           <tr>
@@ -415,7 +415,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
 
     <section>
       <h3 id="kbd_label_6">Menu (Font Family)</h3>
-      <p>The menu changes the font family in the <code>textarea</code>.</p>
+      <p>The menu changes the font family in the <code>textarea</code>  and uses the <a href="../../#menu">Menu design pattern</a>..</p>
       <table aria-labelledby="kbd_label_6" class="def">
         <thead>
           <tr>
@@ -465,7 +465,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
 
     <section>
       <h3 id="kbd_label_7">Spin Button (Font Size)</h3>
-      <p>The spinbutton changes the size of the font in the <code>textarea</code>.
+      <p>The spinbutton changes the size of the font in the <code>textarea</code>  and uses the <a href="../../#spinbutton">Spin Button design pattern</a>..
       <table aria-labelledby="kbd_label_7" class="def">
         <thead>
           <tr>
