added documentation on the left and right arrow keys doning nothing when popup menu has focus.

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -251,6 +251,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
               <ul>
                 <li>Moves focus to the previous control.</li>
                 <li>If the first control has focus, focus moves to the last control.</li>
+                <li>NOTE: When an item in the popup menu has focus, the left arrow key does nothing.</li>
               </ul>
             </td>
           </tr>
@@ -260,6 +261,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
               <ul>
                 <li>Moves focus to the next control.</li>
                 <li>If the last control has focus, focus moves to the first control.</li>
+                <li>NOTE: When an item in the popup menu has focus, the right arrow key does nothing.</li>
               </ul>
             </td>
           </tr>
