added hover effect for buttons, removed use of <i> elements and fixed tooltips for alignment

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -59,7 +59,7 @@
                 aria-label="bold"
                 value="bold"
                 tabindex="0">
-              <i class="fas fa-bold"></i>
+              <span class="fas fa-bold"></span>
             </button>
             <button
                 class="item italic"
@@ -67,7 +67,7 @@
                 aria-pressed="false"
                 value="italic"
                 tabindex="-1">
-              <i class="fas fa-italic"></i>
+              <span class="fas fa-italic"></span>
             </button>
             <button
                 class="item underline"
@@ -75,7 +75,7 @@
                 aria-pressed="false"
                 value="underline"
                 tabindex="-1">
-              <i class="fas fa-underline"></i>
+              <span class="fas fa-underline"></span>
             </button>
           </div>
           <div class="group"
@@ -87,7 +87,7 @@
                 aria-label="Text align left"
                 aria-checked="true"
                 tabindex="-1">
-              <i class="fas fa-align-left"></i>
+              <span class="fas fa-align-left"></span>
             </div>
             <div
                 role="menuitemradio"
@@ -95,7 +95,7 @@
                 aria-label="Text align center"
                 aria-checked="false"
                 tabindex="-1">
-              <i class="fas fa-align-center"></i>
+              <span class="fas fa-align-center"></span>
             </div>
             <div
                 role="menuitemradio"
@@ -103,14 +103,14 @@
                 aria-label="Text align right"
                 aria-checked="false"
                 tabindex="-1">
-              <i class="fas fa-align-right"></i>
+              <span class="fas fa-align-right"></span>
             </div>
           </div>
           <div class="group">
             <button
                 class="item copy"
                 aria-disabled="true"
-                title="Copy selected text form textarea"
+                title="Copy selected text from textarea"
                 tabindex="-1">
               Copy
             </button>
@@ -124,7 +124,7 @@
             <button
                 class="item cut"
                 aria-disabled="true"
-                title="Cut selected text form textarea"
+                title="Cut selected text from textarea"
                 tabindex="-1">
                 Cut
             </button>
