added explaination to why menuitemradio is used for alignment buttons

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -321,7 +321,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
 
     <section>
       <h3 id="kbd_label_4">Menu (Text Alignment)</h3>
-      <p>The menu changes the text alignment of the content in the <code>textarea</code> and uses the <a href="../../#menu">Menu design pattern</a>.</p>
+      <p>The menu changes the text alignment of the content in the <code>textarea</code> and uses the <a href="../../#menu">Menu design pattern</a> using <code>menuitemradio</code>.  The menu pattern is used because the selected item (e.g. checked) does not change when keyboard focus moves between items, the selected item changes with the use of the <kbd>space</kbd> or <kbd>enter</kbd> key.</p>
       <table aria-labelledby="kbd_label_4" class="def">
         <thead>
           <tr>
@@ -702,6 +702,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
 
     <section>
       <h3 id="rps2_label">Menu (Text Alignment)</h3>
+  <p>The menu changes the text alignment of the content in the <code>textarea</code> and uses the <a href="../../#menu">Menu design pattern</a> using <code>menuitemradio</code>.  The menu pattern is used because the selected item (e.g. checked) does not change when keyboard focus moves between items, the selected item changes with the use of the <kbd>space</kbd> or <kbd>enter</kbd> key.</p>
       <table aria-labelledby="rps2_label rps_label" class="data attributes">
         <thead>
           <tr>
